--- a/travelgram-frontend/index.html
+++ b/travelgram-frontend/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles.css" type=""/>
+    <link rel="stylesheet" href="style.css" type=""/>
     <script src="index.js"></script>
     <title>Travelgram</title>
 
  </head>   
  <body>
     <h1>Welcome to Travelgram</h1>
+    <section id="location-box"></section>
  </body>
 </html>
