parsing out the location form fields

--- a/travelgram-frontend/index.html
+++ b/travelgram-frontend/index.html
@@ -11,6 +11,7 @@
  </head>   
  <body>
     <h1>Welcome to Travelgram</h1>
+    <section id="add_location"></section>
     <section id="location-box"></section>
  </body>
 </html>
