--- a/travelgram-frontend/index.html
+++ b/travelgram-frontend/index.html
@@ -11,6 +11,11 @@
  </head>   
  <body>
     <h1>Welcome to Travelgram</h1>
+    <form id="login-form">
+       <label>Select a User</label>
+       <select name="user" id="login-users"></select>
+       <button type="submit">Login as User</button>
+    </form>
     <section id="add_location"></section>
     <section id="location-box"></section>
  </body>
